# university-bachelor-semester-project-5

./: Cargo.toml  LICENSE  README.adoc  deny.toml  flake.nix
.config/: hakari.toml
.github/workflows/: nix_flake_check.yml  nix_flake_update.yml
assets/: output-100000.txt
crates/hakari/: Cargo.toml
crates/iteration-01-base/: Cargo.toml
crates/iteration-01-base/benches/: iteration-01-base.rs
crates/iteration-01-base/src/: lib.rs  main.rs
crates/iteration-01-base/tests/: iteration_01_base.rs
crates/iteration-02-avoid-utf-8-validation/: Cargo.toml
crates/iteration-02-avoid-utf-8-validation/benches/: iteration-02-avoid-utf-8-validation.rs
crates/iteration-02-avoid-utf-8-validation/src/: lib.rs  main.rs
crates/iteration-02-avoid-utf-8-validation/tests/: iteration_02_avoid-utf-8-validation.rs
crates/iteration-02-base/: Cargo.toml
crates/iteration-02-base/benches/: iteration-02-base.rs
crates/iteration-02-base/src/: lib.rs  main.rs
crates/iteration-02-base/tests/: iteration_01_base.rs
crates/iteration-03-avoid-float-parsing/: Cargo.toml
crates/iteration-03-avoid-float-parsing/benches/: iteration-03-avoid-float-parsing.rs
crates/iteration-03-avoid-float-parsing/src/: lib.rs  main.rs
crates/iteration-03-avoid-float-parsing/tests/: iteration_03_avoid_float_parsing.rs
crates/lib/: Cargo.toml
crates/lib/src/: lib.rs  macros.rs  solution.rs
